<resources>
    <string name="app_name">Voting</string>
    <string name="registration_txt">REGISTRATION</string>
    <string name="email_hint_txt">donjoe@mail.com</string>
    <string name="password_hint_txt">Password</string>
    <string name="phone_hint_txt">8596859685</string>
    <string name="name_hint_txt">Jon doe</string>
    <string name="login_btn_txt">Login</string>
    <string name="registration_btn_txt">Register</string>
    <string name="title_voting">Please Select Any One Candidate</string>
    <string name="vote_btn_txt">Vote</string>
    <string name="candidate_avatar_description">Candidate Avatar</string>
    <string name="vote_count_hint_txt">22</string>
    <string name="voter_name_txt">Voter Name</string>
    <string name="splash_screen_logo">splash screen logo</string>
    <string name="thanks_txt">Thank You For Voting</string>

</resources>
